implemented and style admin & front image comments

--- a/config/dm/modules.yml
+++ b/config/dm/modules.yml
@@ -46,11 +46,7 @@ Project:
   
   Commentaire:
   
-    commentaire:
-      parent:     image
-      actions:
-        listByImage: { filters: [ image ], cache: true }
-        form:
+    dmComment:
         
   Sitographie:
   
