--- a/.gitignore
+++ b/.gitignore
@@ -6,11 +6,9 @@ logs
 data/dm/*
 public_html/cache/*
 public_html/.htaccess
-public_html/dm*Plugin
-public_html/sf*
+public_html/Plugin
+public_html/sf
 public_html/uploads/*
 public_html/stats/*
 lib/*/doctrine/base
-lib/*/doctrine/dm*Plugin/base
-lib/migration/doctrine/
-nbproject
+lib/*/doctrine/*Plugin/base
